--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <div class="display" id= "calculator-display">0</div><br>
         <div class="calculator">
             <button style= "background-color: lightgrey">Rad|Deg</button>
-            <button style= "background-color: lightgrey">x!</button>
+            <button style= "background-color: lightgrey" id = "factorial">x!</button>
             <button style= "background-color: lightgrey">(</button>
             <button style= "background-color: lightgrey">)</button>
             <button style= "background-color: lightgrey" id= "percentSign">&#37</button>
             <button style= "background-color: lightgrey" id= "allClearButton">AC</button>
             <button style= "background-color: lightgrey">sin</button>
-            <button style= "background-color: lightgrey">ln</button>
+            <button style= "background-color: lightgrey" id= "ln">ln</button>
             <button id= "numberSeven">7</button>
             <button id= "numberEight">8</button>
             <button id= "numberNine">9</button>
             <button style= "background-color: lightgrey" id= "divisionSign">&#xF7</button>
             <button style= "background-color: lightgrey">cos</button>
-            <button style= "background-color: lightgrey">log</button>
+            <button style= "background-color: lightgrey" id = "log">log</button>
             <button id= "numberFour">4</button>
             <button id= "numberFive">5</button>
             <button id= "numberSix">6</button>
@@ -35,7 +35,7 @@
             <button id= "numberThree">3</button>
             <button style= "background-color: lightgrey" id = "minusSign">&#8722</button>
             <button style= "background-color: lightgrey">EXP</button>
-            <button style= "background-color: lightgrey"><sub>x</sub><sup style = "font-size: 6.0pt">y</sup></button>
+            <button style= "background-color: lightgrey" id = "power"><sub>x</sub><sup style = "font-size: 6.0pt">y</sup></button>
             <button id= "numberZero">0</button>
             <button id= "decimalPoint">.</button>
             <button style= "color: white; background-color: #4967fc" id = "equalSign">=</button>
