--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button id= "numberSix">6</button>
             <button style= "background-color: lightgrey" id = "timesSign">&#215</button>
             <button style= "background-color: lightgrey">tan</button>
-            <button style= "background-color: lightgrey">&#x221A;</button>
+            <button style= "background-color: lightgrey" id= "radical">&#x221A;</button>
             <button id= "numberOne">1</button>
             <button id= "numberTwo">2</button>
             <button id= "numberThree">3</button>
