trig functions implemented

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
             <button style= "background-color: lightgrey" id = "factorial">x!</button>
             <button style= "background-color: lightgrey">(</button>
             <button style= "background-color: lightgrey">)</button>
-            <button style= "background-color: lightgrey" id= "percentSign">&#37</button>
-            <button style= "background-color: lightgrey" id= "allClearButton">AC</button>
-            <button style= "background-color: lightgrey">sin</button>
-            <button style= "background-color: lightgrey" id= "ln">ln</button>
+            <button style= "background-color: lightgrey" id = "percentSign">&#37</button>
+            <button style= "background-color: lightgrey" id = "allClearButton">AC</button>
+            <button style= "background-color: lightgrey" id = "sin">sin</button>
+            <button style= "background-color: lightgrey" id = "ln">ln</button>
             <button id= "numberSeven">7</button>
             <button id= "numberEight">8</button>
             <button id= "numberNine">9</button>
-            <button style= "background-color: lightgrey" id= "divisionSign">&#xF7</button>
-            <button style= "background-color: lightgrey">cos</button>
+            <button style= "background-color: lightgrey" id = "divisionSign">&#xF7</button>
+            <button style= "background-color: lightgrey" id = "cos">cos</button>
             <button style= "background-color: lightgrey" id = "log">log</button>
             <button id= "numberFour">4</button>
             <button id= "numberFive">5</button>
             <button id= "numberSix">6</button>
             <button style= "background-color: lightgrey" id = "timesSign">&#215</button>
-            <button style= "background-color: lightgrey">tan</button>
-            <button style= "background-color: lightgrey" id= "radical">&#x221A;</button>
+            <button style= "background-color: lightgrey" id = "tan">tan</button>
+            <button style= "background-color: lightgrey" id = "radical">&#x221A;</button>
             <button id= "numberOne">1</button>
             <button id= "numberTwo">2</button>
             <button id= "numberThree">3</button>
